--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
       configuration of page headers, which are typically identical throughout a
       work except in aspects such as page numbers.
     </p>
-    <a href="https://github.com/Clintoncode">github</a>
+    <a href="https://github.com/Clintoncode" target="_blank">github</a>
   </body>
 </html>
