--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       work except in aspects such as page numbers.
     </p>
     <a href="https://github.com/Clintoncode" target="_blank">github</a>
+    <img src="Clinton.jpg" alt="Clinton">
   </body>
 </html>
