--- a/index.html
+++ b/index.html
@@ -21,5 +21,26 @@
     </p>
     <a href="https://github.com/Clintoncode" target="_blank">github</a>
     <img src="Clinton.jpg" alt="Clinton">
+    
+ <ul>
+       <li>HTML</li> 
+       <li>NODE JS</li> 
+       <li>JAVASCRIPT</li>
+       <li>CSS</li> 
+       <li>REACT</li>
+       <li>CLOUD</li> 
+ </ul>
+
+ <ol>
+    <li>HTML</li> 
+    <li>NODE JS</li> 
+    <li>JAVASCRIPT</li>
+    <li>CSS</li> 
+    <li>REACT</li>
+    <li>CLOUD</li> 
+</ol>
+
+
+    
   </body>
 </html>
