--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       work except in aspects such as page numbers.
     </p>
     <a href="https://github.com/Clintoncode" target="_blank">github</a>
-    <img src="Clinton.jpg" alt="Clinton" />
+   <center><img src="Clinton.jpg" alt="Clinton" /></center>
 
     <ul>
       <li>HTML</li>
